--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -44,7 +44,8 @@ runs:
         pip install -r requirements.txt
       shell: bash
 
-    - run: |
+    - name: Set environmental variables
+      run: |
         echo "${HTTP_PROXY}"
       shell: bash
       env:
