--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,11 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      - uses: ./.github/actions
+      - name: Setup python and dependecies using composite action
+        uses: ./.github/actions
+
+      - name: Check env vars
+        run: echo "${HTTP_PROXY}"
 
       - name: Build documentation
         run: sphinx-build -E -W -b html ./docs/source ./docs/build
