--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,14 +16,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup python and dependecies using composite action
+        id: setup
         uses: ./.github/actions
 
       - name: Check env vars
         run: echo "${HTTP_PROXY}"
         env:
-          HTTP_PROXY: ${{ inputs.http_proxy }}
-          HTTPS_PROXY: ${{ inputs.https_proxy }}
-          PYTHON_DIR: ${{ inputs.python_dir }}
+          HTTP_PROXY: ${{ steps.setup.inputs.http_proxy }}
+          HTTPS_PROXY: ${{ steps.setup.inputs.https_proxy }}
+          PYTHON_DIR: ${{ steps.setup.inputs.python_dir }}
 
       - name: Build documentation
         run: sphinx-build -E -W -b html ./docs/source ./docs/build
