set env vars in terminal

--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -47,6 +47,10 @@ runs:
     - name: Set environmental variables
       run: |
         echo "${HTTP_PROXY}"
+        export HTTP_PROXY="${HTTP_PROXY}"
+        export HTTPS_PROXY="${HTTPS_PROXY}"
+        export PYTHON_DIR="${PYTHON_DIR}"
+        echo "${{ inputs.http_proxy }}""
       shell: bash
       env:
         HTTP_PROXY: ${{ inputs.http_proxy }}
